# baklavacutter

./: README.md  cookiecutter.json  slurm.toml
hooks/: post_gen_project.sh  pre_gen_project.sh
{{cookiecutter.directory_name}}/: .gitignore  .pre-commit-config.yaml  README.md  make_disposable_env.sh  matplotlibrc  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py  setup.sh
{{cookiecutter.directory_name}}/hooks/: post_gen_project.py  pre_commit_hooks.sh
{{cookiecutter.directory_name}}/{{cookiecutter.directory_name}}/: example.py  utils.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CLAUDE.md  README.md  matplotlibrc  pyproject.toml
