[project]
name = "{{cookiecutter.directory_name}}"
version = "0.0.1"
dependencies = ["transformers[torch]", "seaborn", "fastcore"]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff","notebook"]
linux = ["flash-attn; sys_platform == 'linux'", "vllm; sys_platform == 'linux'"]

[tool.setuptools]
py-modules = ["{{cookiecutter.directory_name}}"]

[tool.ruff]
line-length = 200
lint.ignore = ["E731", "E501", "E701", "E702", "F403"]
lint.extend-select = ["I"]
