[project]
name = "{{cookiecutter.project_name}}"
requires-python = "=={{cookiecutter.python_version}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
dependencies = [
  "transformers[torch]",
  "einops",
  "seaborn",
  "fastcore",
]

[dependency-groups]
dev = [
  "pre-commit",
  "ipykernel",
  "nbclassic",
  "ruff",
  "ipdb"
]

[project.optional-dependencies]
cuda = ["flash-attn"]

[tool.setuptools]
packages = ["{{cookiecutter.project_name}}"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
no-build-isolation-package = ["flash-attn"]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = "{{cookiecutter.project_name}}"
module-root = ""

[tool.ruff.lint.isort]
extra-standard-library = ["tomllib"]
known-third-party = ["wandb"]

[tool.ruff.lint]
ignore = ["E701"]

